--- a/css/style.css
+++ b/css/style.css
@@ -254,10 +254,11 @@ body {
    ========================= */
 @media (max-width: 600px) {
   .site-header { padding: 0.9rem 1rem; }
-  .content { max-width: 100%; margin: 1rem auto; padding: 1rem; }
+  .content {max-width: 100%; margin: 1rem auto; padding: 1rem; }
   .content h2 { font-size: 0.9rem; }
   .content p { font-size: 1rem; }
-  .carousel-wrapper { width: 100%; padding-left: 0; padding-right: 0; }
-  .carousel-item { flex: 0 0 30%; margin-right: 5px; }
+  .carousel-wrapper { width: 100%; max-width: 100%; padding-left: 0; padding-right: 0;overflow-x: auto; }
+  .carousel-item { flex: 0 0 80%; margin-right: 10px; }
+  .carousel{flex-wrap: nowrap;padding-right: 0;}
   .nav-btn { font-size: 1.2rem; width: 30px; height: 50px; }
 }
