--- a/css/style.css
+++ b/css/style.css
@@ -260,5 +260,5 @@ body {
   .carousel-wrapper { width: 100%; max-width: 100%; padding-left: 0; padding-right: 0;overflow-x: auto; }
   .carousel-item { flex: 0 0 80%; margin-right: 10px; }
   .carousel{flex-wrap: nowrap;padding-right: 0;}
-  .nav-btn { font-size: 1.2rem; width: 30px; height: 50px; }
+  .nav-btn { font-size: 1.2rem; width: 30px; height: 50px; display: none; }
 }
