--- a/css/style.css
+++ b/css/style.css
@@ -171,13 +171,17 @@ body {
   width: var(--wrapper-width);
   position: relative;
   padding-left: 50px;
+    overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+  padding-right: 20px;   /* gibt Platz für das letzte Item */
 }
 
 .carousel {
   display: flex;
   transition: transform 0.3s ease;
   list-style: none;
-  padding-right: 50px;
+  padding-right: 30px;
 }
 
 .carousel-item {
